--- a/Twootr/build.gradle
+++ b/Twootr/build.gradle
@@ -16,5 +16,6 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    implementation "org.bouncycastle:bcprov-jdk15on:1.70"
     testImplementation group: 'junit', name : 'junit', version: '4.12', "org.mockito:mockito-core:3.+"
 }
